--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.4.2",
     "nodemailer": "^6.9.3",
     "pug": "^3.0.2",
