--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.2",
     "nodemailer": "^6.9.3",
