--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.2",
     "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pug": "^3.0.2",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.3",
