--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "dropzone": "^5.9.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
