--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "pug": "^3.0.2",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.3",
+    "svg2img": "^1.0.0-beta.2",
+    "text-to-svg": "^3.1.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
