--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-validator": "^7.0.1",
+    "imagesloaded": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
