--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-validator": "^7.0.1",
     "imagesloaded": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mercadopago": "1.5.16",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.4.2",
