--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-validator": "^7.0.1",
+    "form-serialize": "^0.7.2",
     "imagesloaded": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
     "mercadopago": "1.5.16",
